Tweak sidebar styling to prevent map overlap

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 .MuiAppBar-root {
   z-index: 1201 !important;
 }
+.MuiDrawer-paper {
+  overflow-x: hidden;
+}
+
 .nav-brand {
   margin-right: 12px;
 }
